# serial-client

./: Cargo.toml  Makefile.toml  README.md
src/: cli.rs  main.rs  master.rs  read.rs  scan_addr.rs  slave.rs  write.rs
