[package]
name = "serial-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"]}
anyhow = "1.0.71"
serialport = {version="4.2.0", default_features = false, features = ["serde"]}
custom-utils = "0.10.14"
libc = "=0.2.137"
tokio = { version = "1.21.1", features = ["full"]}
log = "0.4.17"
bytes = "1.4.0"
hex = "0.4.3"
pretty-hex = "0.3.0"

[patch.crates-io]
libc = { git = "https://github.com/wangjuyunlian/libc.git", branch = "Branch_0.2.137"}
