[package]
name = "serial-client"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"]}
anyhow = "1.0.71"
serialport = {version="4.2.0", default_features = false, features = ["serde"]}
tokio-serial = "5.4.4"
custom-utils = "0.10.15"
libc = "=0.2.147"
tokio = { version = "1.27.0", features = ["full"]}
log = "0.4.17"
bytes = "1.4.0"
hex = "0.4.3"
pretty-hex = "0.3.0"
crc = "3.0.1"
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
tokio-modbus = { git = "https://github.com/wangjuyunlian/tokio-modbus.git", branch = "wjdev", features = ["rtu", "server", "rtu-server"], default-features = false }
futures-util = "0.3.28"
[patch.crates-io]
libc = { git = "https://github.com/wangjuyunlian/libc.git", branch = "Branch_0.2.147"}
